[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/background.png" type="Texture" id=1]
[ext_resource path="res://sprites/UI/SaveBackground.png" type="Texture" id=2]
[ext_resource path="res://sprites/UI/SaveSelect.png" type="Texture" id=3]
[ext_resource path="res://sprites/UI/SaveSelectSelected.png" type="Texture" id=4]
[ext_resource path="res://Fonts/Andalus/2.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://sprites/UI/smallButtonNormal.png" type="Texture" id=6]
[ext_resource path="res://sprites/UI/buttons.png" type="Texture" id=7]
[ext_resource path="res://UI/SaveSelect.gd" type="Script" id=8]
[ext_resource path="res://sprites/UI/buttonsSelected.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 94
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 14
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 22
font_data = ExtResource( 5 )

[node name="SaveSelect" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 535, 299.68 )
scale = Vector2( 1.30642, 1.30642 )
texture = ExtResource( 1 )

[node name="SaveSelectBackground1" type="Sprite" parent="."]
position = Vector2( 512.449, 251.712 )
scale = Vector2( 0.890634, 0.942291 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="SaveSelectBackground1"]
margin_left = -318.392
margin_top = -190.166
margin_right = 331.608
margin_bottom = -46.1657
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.607843, 0, 1 )
text = "Save File Selector"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveSelectBackground2" type="Sprite" parent="."]
position = Vector2( 512.449, 347.863 )
scale = Vector2( 0.890634, 0.942291 )
texture = ExtResource( 2 )

[node name="SaveFile1" type="TextureButton" parent="."]
margin_left = 195.306
margin_top = 198.041
margin_right = 398.306
margin_bottom = 498.041
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SaveFile1"]
margin_left = 61.0
margin_top = 22.7952
margin_right = 136.0
margin_bottom = 55.7952
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.607843, 0, 1 )
text = "Save 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblStats" type="Label" parent="SaveFile1"]
margin_left = 19.0
margin_top = 81.0
margin_right = 178.0
margin_bottom = 278.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.607843, 0, 1 )
text = "xyz:10000,10000,10000"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveFile2" type="TextureButton" parent="."]
margin_left = 411.841
margin_top = 198.041
margin_right = 614.841
margin_bottom = 498.041
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SaveFile2"]
margin_left = 64.0
margin_top = 23.0
margin_right = 139.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.607843, 0, 1 )
text = "Save 2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblStats" type="Label" parent="SaveFile2"]
margin_left = 19.9385
margin_top = 81.0
margin_right = 178.939
margin_bottom = 278.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.607843, 0, 1 )
text = "xyz:10000,10000,10000"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveFile3" type="TextureButton" parent="."]
margin_left = 631.002
margin_top = 198.041
margin_right = 834.002
margin_bottom = 498.041
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SaveFile3"]
margin_left = 65.0901
margin_top = 23.0
margin_right = 140.09
margin_bottom = 55.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.607843, 0, 1 )
text = "Save 3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblStats" type="Label" parent="SaveFile3"]
margin_left = 22.5269
margin_top = 81.0
margin_right = 181.527
margin_bottom = 278.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.607843, 0, 1 )
text = "xyz:10000,10000,10000"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512.429, 300.004 )
current = true

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 468.608
margin_top = 529.721
margin_right = 560.608
margin_bottom = 579.721
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_focused = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BackButton"]
margin_left = 6.0
margin_right = 85.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 4 )
text = "Back"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="SaveFile1" to="." method="_on_SaveFile1_button_up"]
[connection signal="focus_entered" from="SaveFile1" to="." method="_on_SaveFile1_focus_entered"]
[connection signal="focus_exited" from="SaveFile1" to="." method="_on_SaveFile1_focus_exited"]
[connection signal="mouse_entered" from="SaveFile1" to="." method="_on_SaveFile1_mouse_entered"]
[connection signal="mouse_exited" from="SaveFile1" to="." method="_on_SaveFile1_mouse_exited"]
[connection signal="button_up" from="SaveFile2" to="." method="_on_SaveFile2_button_up"]
[connection signal="focus_entered" from="SaveFile2" to="." method="_on_SaveFile2_focus_entered"]
[connection signal="focus_exited" from="SaveFile2" to="." method="_on_SaveFile2_focus_exited"]
[connection signal="mouse_entered" from="SaveFile2" to="." method="_on_SaveFile2_mouse_entered"]
[connection signal="mouse_exited" from="SaveFile2" to="." method="_on_SaveFile2_mouse_exited"]
[connection signal="button_up" from="SaveFile3" to="." method="_on_SaveFile3_button_up"]
[connection signal="focus_entered" from="SaveFile3" to="." method="_on_SaveFile3_focus_entered"]
[connection signal="focus_exited" from="SaveFile3" to="." method="_on_SaveFile3_focus_exited"]
[connection signal="mouse_entered" from="SaveFile3" to="." method="_on_SaveFile3_mouse_entered"]
[connection signal="mouse_exited" from="SaveFile3" to="." method="_on_SaveFile3_mouse_exited"]
[connection signal="button_up" from="BackButton" to="." method="_on_BackButton_button_up"]
